site_assets/site_style.css
/* Imports */
@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
@import url('/site_assets/palette.css');


/* Basic */
:root {
    --main-width: 65%;
    --min-width: 250px;
}
@media (max-width: 920px) { :root {--main-width: 80%} }
@media (max-width: 740px) { :root {--main-width: 95%} }

html, body {
    font-size: 16px;
    height: 100%;
    margin: 0;
    min-width: var(--min-width);
}


/* Fonts */
body {
    font-weight: 400;
    font-family: 'Nunito Sans', sans-serif;
    color: var(--fontblack);
}
h1, h2, h3, h4, h5, h6 {
    font-family: 'Montserrat', sans-serif;
}
nav li, nav li a {
    font-family: 'Montserrat', sans-serif;
}


/* Links */
a, nav a {
    color: var(--green);
    text-decoration: none;
}
a:visited, nav a:visited {
    color: var(--green);
}
a:hover, nav a:hover {
    text-decoration: underline;
}


/* Home and CV */
main#home, main#cv {
    --border-overflow: calc(0.5rem + 1.5%);
    width: calc(var(--main-width) + 2 * var(--border-overflow));
    margin: auto;
    min-width: var(--min-width);
}
main#home > section, main#cv > section {
    border-bottom: 1px solid var(--orange);
    padding: 2rem var(--border-overflow) 2rem var(--border-overflow);
}
main#home section h2, main#cv section h2 {
    margin: 0 0 1.5rem 0;
}

